--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cloudinary: ^1.2.0
   flutter_dotenv: ^5.1.0
   flutter_rating_bar: ^4.0.1
+  logger: ^2.0.2+1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
