--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.1.0
-  provider: ^6.1.1
+  provider: ^6.1.1 #for user presentate
   shared_preferences: ^2.2.2
   badges: ^3.1.2
   carousel_slider: ^4.2.1
